Desenvolvimento do webservice REST

--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
   "dependencies": {
     "backbone": "~1.2.3",
     "blueimp-file-upload": "^9.11.2",
-    "bootstrap": "~3.3.0",
+    "bootstrap": "~3.3.6",
     "flux": "~2.1.1",
     "history": "~1.13.0",
     "jquery": "~2.1.4",
     "react": "~0.14.2",
-    "react-bootstrap": "~0.27.3",
+    "react-bootstrap": "^0.27.3",
     "react-dom": "~0.14.2",
     "react-maskedinput": "^3.0.0",
     "react-router": "~1.0.0-rc4",
